fix: overflow layout for UserLayout

--- a/fe/platypus-marketplace/.eslintrc.json
+++ b/fe/platypus-marketplace/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": [
+    "next/babel",
     "next/core-web-vitals",
     "plugin:testing-library/react",
     "plugin:jest-dom/recommended"
