--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -42,33 +42,17 @@ services:
     network_mode: host
 
   backend:
-    build:
-      context: ./be
-      dockerfile: Dockerfile
     image: platypusadmin/platypus-be
     restart: always
-    env_file:
-      - ./be/.env
     depends_on:
       - db
       - cache
     network_mode: host
 
-  platypus-marketplace:
-    build:
-      context: ./fe/platypus-marketplace
-      dockerfile: Dockerfile
-    image: platypusadmin/platypus-fe
-    restart: always
-    network_mode: host
-
   reverse-proxy:
     depends_on:
       - backend
-      - platypus-marketplace
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: nginx:mainline-alpine3.18-slim
     restart: always
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
