feat: add certbot image

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,8 +55,15 @@ services:
     image: nginx:mainline-alpine3.18-slim
     restart: always
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certbot/www/:/var/www/certbot:ro
     network_mode: host
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
 
 volumes:
   data-db:
