--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,22 +2,32 @@ server {
         include /etc/nginx/mime.types;
 
         listen 80;
+        listen [::]:80;
 
-        location ^~ /vm4/backend/ {
+        server_name api.platypus.web.id;
+        server_tokens off;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
             proxy_set_header Host $host;
             proxy_pass http://127.0.0.1:8080/;
-
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Headers' '*';
-            add_header 'Access-Control-Allow-Methods' '*';
-        }
-
-        location ^~ / {
-            proxy_pass http://127.0.0.1:3001/;
-        }
-
-        location ^~ /api/ {
-            proxy_pass http://127.0.0.1:3001/api/;
         }
  }
+
+ server {
+        include /etc/nginx/mime.types;
+
+        listen 443 default_server ssl http2;
+        listen [::]:443 ssl http2;
+
+        server_name api.platypus.web.id;
+        ssl_certificate /etc/nginx/ssl/live/api.platypus.web.id/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/live/api.platypus.web.id/privkey.pem;
+
+        location / {
+            proxy_pass http://api.platypus.web.id;
+        }
+}
