--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,12 +20,13 @@ server {
  server {
         include /etc/nginx/mime.types;
 
-        listen 443 default_server ssl http2;
-        listen [::]:443 ssl http2;
+        listen 443 default_server ssl;
+        listen [::]:443 ssl;
+        http2 on;
 
         server_name api.platypus.web.id;
-        ssl_certificate /etc/nginx/ssl/live/api.platypus.web.id/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/live/api.platypus.web.id/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/api.platypus.web.id/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.platypus.web.id/privkey.pem;
 
         location / {
             proxy_pass http://api.platypus.web.id;
